# PR_Pilot

./: .gitattributes  .gitignore  COLAB_INSTRUCTIONS.md  Dockerfile  HACKATHON_BLOG.md  HACKATHON_SLIDES.md  PROJECT_SPEC.md  QUICK_START_COLAB.md  README.md  WRITEUP_TEMPLATE.md  check_submission.ps1  gradio_app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  training_trl_colab.ipynb
.github/prompts/: plan-multiAgentSelfImprovement.prompt.md
.github/workflows/: tests.yml
app/: main.py
baseline/: run_agent.py
code_review_env/: __init__.py  actions.py  agents.py  env.py  reward.py  state.py
configs/: gym.yaml
data/: easy_prs.json  hard_prs.json  medium_prs.json
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
results/: README.md  training_summary.txt
server/: app.py
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
tests/: conftest.py  test_actions.py  test_agents.py  test_env.py  test_graders.py  test_reward.py  test_state.py
