[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "1.0.0"
description = "Gymnasium environment for AI pull-request code review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "reinforcement-learning",
    "gymnasium",
    "openai-gym",
    "code-review",
    "pull-request",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.23.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.2.0",
    "PyYAML>=6.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.21.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.21.0",
    "httpx>=0.24.0",
]
ui = [
    "gradio>=4.0.0",
]
llm = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.21.0",
    "httpx>=0.24.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
code-review-agent = "baseline.run_agent:main"
code-review-server = "server.app:main"
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/ANUSHA0320/CodeReviewEnv"
Repository = "https://github.com/ANUSHA0320/CodeReviewEnv"
"Hugging Face Space" = "https://huggingface.co/spaces/anu1720/code-review-gym"

[tool.setuptools.packages.find]
exclude = ["tests*", "baseline*", "app*"]

[tool.setuptools.package-data]
code_review_env = ["../data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["code_review_env", "tasks", "graders"]
omit = ["tests/*", "baseline/*", "app/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
